# NewsValidatorwithHaskell

./: README.md
HaskellNewsValidator/: CHANGELOG.md  informationlog.txt  newsvalidator.cabal
HaskellNewsValidator/app/: GlobalNewsMainDB.txt  Main.hs  trusteeinfoapps.hs
HaskellNewsValidator/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
HaskellNewsValidator/dist-newstyle/packagedb/ghc-9.2.4/: newsvalidator-0.1.0.0-inplace.conf  package.cache
