cabal-version:      2.4
name:               newsvalidator
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis: DECENTRALIZED NEWS VALIDATOR
-- A longer description of the package.
-- description: Decentralized News Information Validator is Application to  Verified and Validated
-- News or Information with cross referenced to  Decentralized News/ Information Main Database
-- The Result of Verified and Validate News or Information
-- And Trustee and Information Contents Insight.
-- A URL where users can report bugs.
-- bug-reports: Bugs report could send through github comments or email Radityapratama4567@gmail.com
-- The license under which the package is released.
-- license: MIT

-- The package author(s).
-- author: Raditya Pratama 

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer: Radityapratama4567@gmail.com

author:             Raditya Pratama 
maintainer:         

-- A copyright notice.
-- copyright: 
-- category : Library Application

extra-source-files: CHANGELOG.md

library
    exposed-modules:  MyLib

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.3.0, time ^>=1.11.1.1, ansi-terminal ^>=0.11.3
    hs-source-dirs:   src
    default-language: Haskell2010

executable newsvalidator
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.3.0, time ^>=1.11.1.1, ansi-terminal ^>=0.11.3,
        newsvalidator

    hs-source-dirs:   app
    default-language: Haskell2010
